gifs are added and vertical carousel on mobile is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
 	font-display: swap;
 }
 
+html,
+body,
+#root,
+.outerContainer {
+	height: 100%;
+}
+
 body {
 	margin: 0;
 	padding: 0;
