--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,6 @@
+header {
+	width: 100%;
+}
 .container {
 	display: flex;
 	flex-direction: row;
