--- a/src/components/VerticalCarousel/VerticalCarousel.module.css
+++ b/src/components/VerticalCarousel/VerticalCarousel.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	height: 45rem; /* Adjust height as needed */
+	height: 80svh;
 	overflow: hidden; /* Hide overflow to prevent content from spilling out */
 }
 
